# database

./: .gitignore  Dockerfile
.github/workflows/: build.yaml
javascript/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
javascript/prisma/migrations/20260426105804_init/: migration.sql
javascript/prisma/schemas/: browser-job.prisma  browser.prisma  profile.prisma  schema.prisma
javascript/src/: client.js
python/: pyproject.toml
python/src/: __init__.py  client.py  query_utils.py
python/src/models/: __init__.py  base.py  browser.py  browser_job.py  profile.py
python/src/schemas/: __init__.py
