[project]
name = "providence-database"
version = "0.1.0"
description = "Providence Database: PostgreSQL models and schemas"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "sqlalchemy==2.0.40",
]

[tool.setuptools.package-dir]
providence_database = "./src"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"